Fix some text overflow issues

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ button {
     align-items: end;
     justify-content: end;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 
